// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Infobar/> should render current customer with suggested customer 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Connect(InfobarCustomerInfo)
        actions={
          Object {
            "startEditionMode": [MockFunction],
            "stopEditionMode": [MockFunction],
            "submitWidgets": [MockFunction],
          }
        }
        customer={
          Immutable.Map {
            "id": 2,
          }
        }
        displayTabs={true}
        isEditing={false}
        sources={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "id": 2,
              },
            },
            "customer": Immutable.Map {
              "id": 2,
            },
          }
        }
        widgets={
          Immutable.Map {
            "_internal": Immutable.Map {
              "isEditing": false,
            },
          }
        }
      />
      <div
        className="d-none d-md-block"
      >
        <div
          className="infobarSectionSeparator"
        />
        <div
          className="suggestedCustomer"
        >
          <h4>
            Is this the same person?
          </h4>
          <p>
            'We have found someone similar to the customer of this ticket. If it is the same person, merge them together to get a unified view of this customer.
          </p>
          <div
            style={
              Object {
                "marginBottom": "30px",
              }
            }
          >
            <Button
              className="mr-2"
              color="primary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              <i
                className="material-icons mr-1"
              >
                call_merge
              </i>
              Merge
            </Button>
          </div>
          <ContextProvider
            value={
              Object {
                "actionError": "You can only edit orders of the customer associated with this ticket.
To edit this order, merge both customers or change the customer associated with this ticket.",
              }
            }
          >
            <Connect(InfobarCustomerInfo)
              actions={
                Object {
                  "startEditionMode": [MockFunction],
                  "stopEditionMode": [MockFunction],
                  "submitWidgets": [MockFunction],
                }
              }
              customer={
                Immutable.Map {
                  "id": 10,
                }
              }
              displayTabs={false}
              isEditing={false}
              sources={
                Immutable.Map {
                  "ticket": Immutable.Map {
                    "customer": Immutable.Map {
                      "id": 10,
                    },
                  },
                  "customer": Immutable.Map {
                    "id": 10,
                  },
                }
              }
              widgets={
                Immutable.Map {
                  "_internal": Immutable.Map {
                    "isEditing": false,
                  },
                }
              }
            />
            <Connect(MergeCustomersContainer)
              destinationCustomer={
                Immutable.Map {
                  "id": 2,
                }
              }
              display={false}
              isTicketContext={true}
              onClose={[Function]}
              onSuccess={[Function]}
              sourceCustomer={
                Immutable.Map {
                  "id": 10,
                }
              }
            />
          </ContextProvider>
        </div>
      </div>
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render customer context 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Connect(InfobarCustomerInfo)
        actions={
          Object {
            "startEditionMode": [MockFunction],
            "stopEditionMode": [MockFunction],
            "submitWidgets": [MockFunction],
          }
        }
        customer={
          Immutable.Map {
            "id": 2,
          }
        }
        displayTabs={true}
        isEditing={false}
        sources={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "id": 2,
              },
            },
            "customer": Immutable.Map {
              "id": 2,
            },
          }
        }
        widgets={
          Immutable.Map {
            "_internal": Immutable.Map {
              "isEditing": false,
            },
          }
        }
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render loading state because the customer is being fetched 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Loader
        inline={false}
        minHeight="500px"
        size="40px"
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render loading state because the search is in progress 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Loader
        inline={false}
        minHeight="500px"
        size="40px"
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render search results 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <div
        className="m-3"
      >
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          <i
            className="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </Button>
      </div>
      <InfobarSearchResultsList
        defaultCustomerId={2}
        errorMessage={null}
        onCustomerClick={[Function]}
        searchResults={
          Immutable.List [
            Immutable.Map {
              "id": 8,
            },
            Immutable.Map {
              "id": 9,
            },
          ]
        }
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render selected customer 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <div
        className="m-3"
      >
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          <i
            className="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </Button>
        <InfobarCustomerActions
          customer={
            Immutable.Map {
              "id": 2,
            }
          }
          selectedCustomer={
            Immutable.Map {
              "id": 7,
            }
          }
          setCustomer={[Function]}
          sources={
            Immutable.Map {
              "ticket": Immutable.Map {
                "customer": Immutable.Map {
                  "id": 2,
                },
              },
              "customer": Immutable.Map {
                "id": 2,
              },
            }
          }
          toggleMergeCustomerModal={[Function]}
        />
      </div>
      <ContextProvider
        value={
          Object {
            "actionError": "You can only edit orders of the customer associated with this ticket.
To edit this order, merge both customers or change the customer associated with this ticket.",
          }
        }
      >
        <Connect(InfobarCustomerInfo)
          actions={
            Object {
              "startEditionMode": [MockFunction],
              "stopEditionMode": [MockFunction],
              "submitWidgets": [MockFunction],
            }
          }
          customer={
            Immutable.Map {
              "id": 7,
            }
          }
          displayTabs={true}
          isEditing={false}
          sources={
            Immutable.Map {
              "ticket": Immutable.Map {
                "customer": Immutable.Map {
                  "id": 7,
                },
              },
              "customer": Immutable.Map {
                "id": 7,
              },
            }
          }
          widgets={
            Immutable.Map {
              "_internal": Immutable.Map {
                "isEditing": false,
              },
            }
          }
        />
        <Connect(MergeCustomersContainer)
          destinationCustomer={
            Immutable.Map {
              "id": 2,
            }
          }
          display={false}
          isTicketContext={true}
          onClose={[Function]}
          onSuccess={[Function]}
          sourceCustomer={
            Immutable.Map {
              "id": 7,
            }
          }
        />
      </ContextProvider>
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render the error when loading error 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <div
        className="m-3"
      >
        <Button
          color="secondary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          <i
            className="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </Button>
      </div>
      <InfobarSearchResultsList
        defaultCustomerId={2}
        errorMessage="Failed to do the search. Please try again."
        onCustomerClick={[Function]}
        searchResults={Immutable.List []}
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render ticket context 1`] = `
<Connect(InfobarLayout)
  className=""
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={false}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Edit widgets
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Connect(InfobarCustomerInfo)
        actions={
          Object {
            "startEditionMode": [MockFunction],
            "stopEditionMode": [MockFunction],
            "submitWidgets": [MockFunction],
          }
        }
        customer={
          Immutable.Map {
            "id": 2,
          }
        }
        displayTabs={true}
        isEditing={false}
        sources={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "id": 2,
              },
            },
            "customer": Immutable.Map {
              "id": 2,
            },
          }
        }
        widgets={
          Immutable.Map {
            "_internal": Immutable.Map {
              "isEditing": false,
            },
          }
        }
      />
    </div>
  </div>
</Connect(InfobarLayout)>
`;

exports[`<Infobar/> should render widgets edition mode 1`] = `
<Connect(InfobarLayout)
  className="editing"
>
  <div
    className="infobarContent"
  >
    <div
      className="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <Component
        bindKey={true}
        onChange={[Function]}
        placeholder="Search for customers by email, order number, etc."
        searchDebounceTime={200}
        style={
          Object {
            "maxWidth": "none",
          }
        }
        tabIndex="10"
      />
      <Button
        active={true}
        className="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent"
        color="secondary"
        disabled={true}
        id="toggle-widgets-edition-button"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          settings
        </i>
      </Button>
      <Tooltip
        delay={0}
        placement="left"
        target="toggle-widgets-edition-button"
      >
        Leave widgets edition
      </Tooltip>
    </div>
    <div
      className="content"
    >
      <Connect(InfobarCustomerInfo)
        actions={
          Object {
            "startEditionMode": [MockFunction],
            "stopEditionMode": [MockFunction],
            "submitWidgets": [MockFunction],
          }
        }
        customer={
          Immutable.Map {
            "id": 2,
          }
        }
        displayTabs={true}
        isEditing={true}
        sources={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "id": 2,
              },
            },
            "customer": Immutable.Map {
              "id": 2,
            },
          }
        }
        widgets={
          Immutable.Map {
            "_internal": Immutable.Map {
              "isEditing": true,
            },
          }
        }
      />
    </div>
  </div>
  <InfobarWidgetsEditionTools
    actions={
      Object {
        "startEditionMode": [MockFunction],
        "stopEditionMode": [MockFunction],
        "submitWidgets": [MockFunction],
      }
    }
    context=""
    widgets={
      Immutable.Map {
        "_internal": Immutable.Map {
          "isEditing": true,
        },
      }
    }
  />
</Connect(InfobarLayout)>
`;
